Add section 'How Object Detection Differs From Related Tasks'

--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -63,3 +63,51 @@ Best thesis ever:
     urldate = {2021-07-31},
     year = {2021},
 }
+@article{liu19,
+	author = {Jie Liu and Jiawen Liu and Wan Du and Dong Li},
+	doi = {10.1109/ICPADS47876.2019.00077},
+	journal = {Proceedings of the International Conference on Parallel and Distributed Systems - ICPADS},
+	keywords = {Deep learning,Hardware heterogeneity,Mobile device,Performance analysis,Performance characterization},
+	month = {12},
+	pages = {506-515},
+	publisher = {IEEE Computer Society},
+	title = {{Performance Analysis and Characterization of Training Deep Learning Models on Mobile Device}},
+	year = {2019},
+}
+@article{mobile_cpu_power,
+	author = {Matthew Halpern and Yuhao Zhu and Vijay Janapa Reddi},
+	doi = {10.1109/HPCA.2016.7446054},
+	journal = {Proceedings - International Symposium on High-Performance Computer Architecture},
+	month = {4},
+	pages = {64-76},
+	publisher = {IEEE Computer Society},
+	title = {{Mobile CPU's rise to power: Quantifying the impact of generational mobile CPU design trends on performance, energy, and user satisfaction}},
+	year = {2016},
+}
+@article{deepType,
+	author = {Mengwei Xu and Feng Qian and Qiaozhu Mei and Kang Huang and Xuanzhe Liu},
+	doi = {10.1145/3287075},
+	issue = {4},
+	journal = {Proceedings of the ACM on Interactive, Mobile, Wearable and Ubiquitous Technologies},
+	keywords = {Deep Learning,Mobile Computing,Personalization},
+	month = {12},
+	pages = {1-26},
+	publisher = {
+	ACM
+	PUB27
+	New York, NY, USA
+	},
+	title = {{DeepType: On-Device Deep Learning for Input Personalization Service with Minimal Privacy Concern}},
+	volume = {2},
+	url = {https://dl.acm.org/doi/abs/10.1145/3287075},
+	year = {2018},
+}
+@online{cvTasks,
+	author = {Fei-Fei Li and Ranjay Krishna and Danfei Xu},
+	journal = {CS231n: Convolutional Neural Networks for Visual Recognition Stanford - Spring},
+	month = {5},
+	title = {{Detection and Segmentation}},
+	url = {http://cs231n.stanford.edu/slides/2021/lecture_15.pdf},
+	year = {2021},
+}
+
