--- a/thesis/settings.tex
+++ b/thesis/settings.tex
@@ -112,7 +112,8 @@
 
 % clickable links and clickable table of content <3
 % Options: links with linebreaks
-\PassOptionsToPackage{hyphens}{url}\usepackage[bookmarks=false]{hyperref}
+\PassOptionsToPackage{hyphens}{url}
+\usepackage[bookmarks=false]{hyperref}
 \hypersetup{
     colorlinks,
     citecolor=black,
@@ -129,6 +130,9 @@
 % for custon stuff like use:
 % \hyperref[custom:foo]{Custom~\ref*{custom:foo}}
 
+% -------------------------------------------------------------------------------
+% ------------------------- Bibliography Customisation ------------------------
+% -------------------------------------------------------------------------------
 
 % replace \makebibliography with this package to enable nice formatting for citing web pages
 \usepackage[%
