--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -10,7 +10,7 @@ Best thesis ever:
 	title = {Task Based Parallelization of the Fast Multipole Method implementation of ls1-mardyn via QuickSched},
 	type = {Master's thesis},
 	year = {2017},
-	URL = {https://www5.in.tum.de/pub/Gratl_MA_TaskBasedFMM.pdf}
+	URL = {https://www5.in.tum.de/pub/Gratl_MA_TaskBasedFMM.pdf},
 }
 @online{nnapi_devguide_2021,
    author = {Android Developers},
@@ -109,5 +109,63 @@ Best thesis ever:
 	title = {{Detection and Segmentation}},
 	url = {http://cs231n.stanford.edu/slides/2021/lecture_15.pdf},
 	year = {2021},
+	urldate = {2021-07-31},
+}
+@article{rcnnIntro,
+	author = {Ross Girshick and Jeff Donahue and Trevor Darrell and Jitendra Malik},
+	journal = {Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+	month = {11},
+	pages = {580-587},
+	publisher = {IEEE Computer Society},
+	title = {Rich feature hierarchies for accurate object detection and semantic segmentation},
+	year = {2013},
+}
+@online{mlCourseStan,
+	author = {Andrew Ng},
+	title = {{Machine Learning Course by Stanford University}},
+	url = {https://www.coursera.org/learn/machine-learning},
+	year = {2021},
+	urldate = {2021-07-31},
+}
+@article{mlQuote1967,
+	author = {A. L. Samuel},
+	doi = {10.1147/RD.116.0601},
+	issue = {6},
+	journal = {IBM Journal of Research and Development},
+	month = {11},
+	pages = {601-617},
+	publisher = {IBM},
+	title = {{Some Studies in Machine Learning Using the Game of Checkers. II - Recent Progress}},
+	volume = {11},
+	year = {1967},
+}
+@article{mlQuote1959,
+	author = {A. L. Samuel},
+	doi = {10.1147/RD.33.0210},
+	issue = {3},
+	journal = {IBM Journal of Research and Development},
+	month = {7},
+	pages = {210-229},
+	title = {{Some Studies in Machine Learning Using the Game of Checkers}},
+	volume = {3},
+	url = {http://ieeexplore.ieee.org/document/5392560/},
+	year = {1959},
+}
+@book{mlMitchell,
+	author = {Tom M. Mitchell},
+	editor = {Erick M. Munson},
+	isbn = {0-07-042807-7},
+	month = {3},
+	pages = {xv},
+	publisher = {McGraw-Hill},
+	title = {Machine Learning},
+	year = {1997},
 }
 
+@online{annGraphics,
+	author = {Fei-Fei Li and Ranjay Krishna and Danfei Xu},
+	title = {{CS231n: Convolutional Neural Networks for Visual Recognition}},
+	url = {https://cs231n.github.io/neural-networks-1/},
+	year = {2021},
+	urldate = {2021-07-31},
+}
